tempfile/derive_more/tests/compile_fail/from/legacy_enum_attribute.rs
#[derive(derive_more::From)]
enum Foo {
    #[from(types(i32, "&str"))]
    Bar(String),
}

fn main() {}
